--- a/demo/mux.html
+++ b/demo/mux.html
@@ -5,7 +5,7 @@
     <title>mux demo</title>
   </head>
   <body>
-    <video autoplay controls width="600"></video>
+    <video autoplay controls width="600" id="video"></video>
     <input type="file" id="upload" />
   </body>
 </html>
