拆分多个package，lerna来管理

--- a/packages/vod-fp-player/demo/demo.html
+++ b/packages/vod-fp-player/demo/demo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>vod-fp.js demo</title>
+    <title>vod-fp-player demo</title>
   </head>
   <body>
     <video autoplay controls width="600"></video>
