--- a/packages/vod-fp-mux/demo/demo.html
+++ b/packages/vod-fp-mux/demo/demo.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <video autoplay controls width="600" id="video"></video>
-    <input type="file" id="upload" />
+    <input id="url" />
   </body>
 </html>
