--- a/packages/vod-fp-mux/demo/demo.html
+++ b/packages/vod-fp-mux/demo/demo.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <video autoplay controls width="600" id="video"></video>
-    <input id="url" />
+    <input id="url" style="display:block;width:500px" />
+    <button id="load">load</button>
   </body>
 </html>
