fix m3u8列表ts url为相对地址

--- a/packages/vod-fp-player/demo/demo.html
+++ b/packages/vod-fp-player/demo/demo.html
@@ -5,6 +5,6 @@
     <title>vod-fp-player demo</title>
   </head>
   <body>
-    <video autoplay controls width="600"></video>
+    <video autoplay controls width="600" height="400"></video>
   </body>
 </html>
