调试窗口功能

--- a/packages/vod-fp-player/demo/demo.html
+++ b/packages/vod-fp-player/demo/demo.html
@@ -5,6 +5,8 @@
     <title>vod-fp-player demo</title>
   </head>
   <body>
-    <video autoplay controls width="600" height="400"></video>
+    <div id="player">
+      <video autoplay controls width="600" height="400"></video>
+    </div>
   </body>
 </html>
