start parse flv...

--- a/packages/vod-fp-mux/demo/demo.html
+++ b/packages/vod-fp-mux/demo/demo.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>mux demo</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>mux demo</title>
-</head>
-
-<body>
-  <video autoplay controls width="600" id="video"></video>
-  <input id="url" style="display:block;width:500px" />
-  <button id="load">load</button>
-  <hr>
-  <label>mp4</label>
-  <input type="file" id="mp4Upload">
-</body>
-
+  <body>
+    <video autoplay controls width="600" id="video"></video>
+    <input id="url" style="display:block;width:500px" />
+    <button id="load">load</button>
+    <hr />
+    <label>mp4</label>
+    <input type="file" id="mp4Upload" />
+    <hr />
+    <label>flv</label>
+    <input type="file" id="flvUpload" />
+  </body>
 </html>
